package io.cuttlefish

enum class RegisterType {
    R1, R2, R3, R4, S1, S2, S3, S4, SP, IT
}
