classDiagram
    namespace io.cuttlefish.instructions {
        class ControlFlowKt {
            +handlerJalrjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Jalr, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +handlerBeqjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Beq, kotlin.coroutines.Continuation<? super kotlin.Unit>)
        }
        class MemoryKt {
            +handlerLuijava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Lui, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +handleLwjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Lw, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +handleSwjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Sw, kotlin.coroutines.Continuation<? super kotlin.Unit>)
        }
        class ArithmeticKt {
            +handlerNandjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Nand, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +handlerAddjava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Add, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +signExtend7short (short)
            +handlerAddImmediatejava.lang.Object (io.cuttlefish.components.Cpu, io.cuttlefish.Instruction$Addi, kotlin.coroutines.Continuation<? super kotlin.Unit>)
        }
    }
    namespace io.cuttlefish.components {
        class Stack
        class PhysicalMemory {
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
            +getInternalsshort[] ()
        }
        class MemoryBus {
            +getRamio.cuttlefish.components.PhysicalMemory ()
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getDevicesio.cuttlefish.devices.Device[] ()
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
        class Alu {
            +nandjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super java.lang.Short>)
            +comparejava.lang.Object (short, short, kotlin.coroutines.Continuation<? super java.lang.Boolean>)
            +addjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
        class Cpu {
            +setEpc-xj2QHRwvoid (short)
            +writejava.lang.Object (io.cuttlefish.RegisterType, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getHistorykotlin.collections.ArrayDeque<java.lang.String> ()
            +setKernelModevoid (boolean)
            +setPc-xj2QHRwvoid (short)
            +isKernelModeboolean ()
            +getAluio.cuttlefish.components.Alu ()
            +tickjava.lang.Object (kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +readjava.lang.Object (io.cuttlefish.RegisterType, kotlin.coroutines.Continuation<? super java.lang.Short>)
            +getPc-Mh2AYegshort ()
            +isHaltedboolean ()
            +access$handleTrapjava.lang.Object (io.cuttlefish.components.Cpu, short, kotlin.coroutines.Continuation)
            +getMmuio.cuttlefish.components.MemoryBus ()
            +setHaltedvoid (boolean)
            +getRegistersio.cuttlefish.components.Registers ()
            +getEpc-Mh2AYegshort ()
        }
        class Clock {
            +Clock INSTANCE
            +long getREGISTER_READ_TIME()
            +void setMEMORY_WRITE_TIME(long)
            +void setREGISTER_READ_TIME(long)
            +long getMEMORY_READ_TIME()
            +void setALU_CALCULATION_TIME(long)
            +long getDEVICE_CONSOLE_READ_TIME()
            +long getMEMORY_WRITE_TIME()
            +long getALU_CALCULATION_TIME()
            +void applyConfig(ClockConfig)
            +void setMEMORY_READ_TIME(long)
            +long getDEVICE_CONSOLE_WRITE_TIME()
            +void setDEVICE_CONSOLE_WRITE_TIME(long)
            +long getREGISTER_WRITE_TIME()
            +void setREGISTER_WRITE_TIME(long)
            +void setDEVICE_CONSOLE_READ_TIME(long)
        }
        class Registers {
            +getOldWritekotlin.Pair<io.cuttlefish.RegisterType, java.lang.Short> ()
            +setOldWritevoid (kotlin.Pair<? extends io.cuttlefish.RegisterType, java.lang.Short>)
            +writejava.lang.Object (io.cuttlefish.RegisterType, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getRegisterDatajava.lang.Short[] ()
            +toStringjava.lang.String ()
            +readjava.lang.Object (io.cuttlefish.RegisterType, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
    }
    namespace io.cuttlefish {
        class MemoryManagement {
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
        class MemoryMapRanges {
            +MemoryMapRanges INSTANCE
            +getUserLandRangekotlin.ranges.UIntRange ()
            +getKernelRangekotlin.ranges.UIntRange ()
            +getVectorRangekotlin.ranges.UIntRange ()
            +getMmioRangekotlin.ranges.UIntRange ()
        }
        class RegisterType {
            +RegisterType R3
            +RegisterType R4
            +RegisterType R5
            +RegisterType R6
            +RegisterType R0
            +RegisterType R1
            +RegisterType R2
            +RegisterType R7
            +valueOfio.cuttlefish.RegisterType (java.lang.String)
            +valuesio.cuttlefish.RegisterType[] ()
            +getEntrieskotlin.enums.EnumEntries<io.cuttlefish.RegisterType> ()
        }
        class EKt {
            +void main()
        }
        class HelperKt {
            +short toShort(boolean)
        }
        class Instruction
    }
    namespace io.cuttlefish.config {
        class GlobalConfig {
            +GlobalConfig INSTANCE
            +DebugConfig getDebug()
            +void setDebug(DebugConfig)
        }
        class EmulatorConfig {
            +Companion Companion
            +EmulatorConfig$Companion Companion
            +component1io.cuttlefish.config.ClockConfig ()
            +getClockio.cuttlefish.config.ClockConfig ()
            +write$Self$io_cuttlefish_hardwarevoid (io.cuttlefish.config.EmulatorConfig, kotlinx.serialization.encoding.CompositeEncoder, kotlinx.serialization.descriptors.SerialDescriptor)
            +getDebugio.cuttlefish.config.DebugConfig ()
            +component2io.cuttlefish.config.DebugConfig ()
            +copyio.cuttlefish.config.EmulatorConfig (io.cuttlefish.config.ClockConfig, io.cuttlefish.config.DebugConfig)
            +toStringjava.lang.String ()
            +hashCodeint ()
            +copy$defaultio.cuttlefish.config.EmulatorConfig (io.cuttlefish.config.EmulatorConfig, io.cuttlefish.config.ClockConfig, io.cuttlefish.config.DebugConfig, int, java.lang.Object)
            +equalsboolean (java.lang.Object)
        }
        class DebugConfig {
            +Companion Companion
            +DebugConfig$Companion Companion
            +component1boolean ()
            +getPrintHex16Dumpboolean ()
            +getMapFilejava.lang.String ()
            +getUse16wordAddressInDumpboolean ()
            +getPrintStateboolean ()
            +toStringjava.lang.String ()
            +equalsboolean (java.lang.Object)
            +getPrintHistoryboolean ()
            +component4boolean ()
            +getUseMapboolean ()
            +write$Self$io_cuttlefish_hardwarevoid (io.cuttlefish.config.DebugConfig, kotlinx.serialization.encoding.CompositeEncoder, kotlinx.serialization.descriptors.SerialDescriptor)
            +component5boolean ()
            +copyio.cuttlefish.config.DebugConfig (boolean, boolean, boolean, boolean, boolean, boolean, java.lang.String, boolean)
            +copy$defaultio.cuttlefish.config.DebugConfig (io.cuttlefish.config.DebugConfig, boolean, boolean, boolean, boolean, boolean, boolean, java.lang.String, boolean, int, java.lang.Object)
            +getPrintRegistersOnHaltboolean ()
            +getPrintInstructionsboolean ()
            +component6boolean ()
            +component7java.lang.String ()
            +component3boolean ()
            +hashCodeint ()
            +component8boolean ()
            +component2boolean ()
        }
        class ClockConfig {
            +Companion Companion
            +ClockConfig$Companion Companion
            +getRegisterReadTimeMslong ()
            +copyio.cuttlefish.config.ClockConfig (long, long, long, long, long, long, long)
            +getRegisterWriteTimeMslong ()
            +getCalculationTimeMslong ()
            +component1long ()
            +component2long ()
            +toStringjava.lang.String ()
            +equalsboolean (java.lang.Object)
            +getDeviceConsoleWriteTimeMslong ()
            +write$Self$io_cuttlefish_hardwarevoid (io.cuttlefish.config.ClockConfig, kotlinx.serialization.encoding.CompositeEncoder, kotlinx.serialization.descriptors.SerialDescriptor)
            +component6long ()
            +getMemoryReadTimeMslong ()
            +component4long ()
            +copy$defaultio.cuttlefish.config.ClockConfig (io.cuttlefish.config.ClockConfig, long, long, long, long, long, long, long, int, java.lang.Object)
            +component3long ()
            +component5long ()
            +component7long ()
            +hashCodeint ()
            +getDeviceConsoleReadTimeMslong ()
            +getMemoryWriteTimeMslong ()
        }
    }
    namespace io.cuttlefish.devices {
        class DisplayKt {
            +GridPanel frameInit(JFrame)
        }
        class Device {
            +getMemoryUsedkotlin.ranges.UIntRange ()
            +getDeviceId-Mh2AYegshort ()
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getNamejava.lang.String ()
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
        class GridPanel
        class Console {
            +getMemoryUsedkotlin.ranges.UIntRange ()
            +getDeviceId-Mh2AYegshort ()
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getNamejava.lang.String ()
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
        class Display {
            +getMemoryUsedkotlin.ranges.UIntRange ()
            +getDeviceId-Mh2AYegshort ()
            +write-_TFR7lAjava.lang.Object (short, short, kotlin.coroutines.Continuation<? super kotlin.Unit>)
            +getNamejava.lang.String ()
            +read-vckuEUMjava.lang.Object (short, kotlin.coroutines.Continuation<? super java.lang.Short>)
        }
    }
    namespace io.cuttlefish.backend {
        class BackendKt {
            +void main()
        }
        class Backend {
            +encodejava.util.List<kotlin.UShort> (java.util.List<? extends io.cuttlefish.Instruction>)
            +decode-xj2QHRwio.cuttlefish.Instruction (short)
            +decodejava.util.List<io.cuttlefish.Instruction> (java.util.List<kotlin.UShort>)
        }
    }
    io.cuttlefish.instructions.ControlFlowKt ..> io.cuttlefish.components.Alu
    io.cuttlefish.instructions.ControlFlowKt ..> io.cuttlefish.instructions.ArithmeticKt
    io.cuttlefish.instructions.ControlFlowKt ..> io.cuttlefish.RegisterType
    io.cuttlefish.instructions.ControlFlowKt ..> io.cuttlefish.components.Cpu
    io.cuttlefish.instructions.ControlFlowKt ..> io.cuttlefish.Instruction
    io.cuttlefish.MemoryManagement <|.. io.cuttlefish.components.PhysicalMemory
    io.cuttlefish.components.PhysicalMemory ..> io.cuttlefish.components.Clock
    io.cuttlefish.components.PhysicalMemory ..> io.cuttlefish.MemoryManagement
    io.cuttlefish.config.GlobalConfig ..> io.cuttlefish.config.DebugConfig
    io.cuttlefish.devices.DisplayKt ..> io.cuttlefish.devices.GridPanel
    io.cuttlefish.MemoryManagement <|.. io.cuttlefish.components.MemoryBus
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.MemoryMapRanges
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.devices.Display
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.devices.Device
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.components.PhysicalMemory
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.MemoryManagement
    io.cuttlefish.components.MemoryBus ..> io.cuttlefish.devices.Console
    io.cuttlefish.components.Alu ..> io.cuttlefish.components.Clock
    io.cuttlefish.config.EmulatorConfig ..> io.cuttlefish.config.ClockConfig
    io.cuttlefish.config.EmulatorConfig ..> io.cuttlefish.config.DebugConfig
    io.cuttlefish.components.Cpu ..> io.cuttlefish.instructions.ArithmeticKt
    io.cuttlefish.components.Cpu ..> io.cuttlefish.instructions.ControlFlowKt
    io.cuttlefish.components.Cpu ..> io.cuttlefish.backend.Backend
    io.cuttlefish.components.Cpu ..> io.cuttlefish.Instruction
    io.cuttlefish.components.Cpu ..> io.cuttlefish.config.GlobalConfig
    io.cuttlefish.components.Cpu ..> io.cuttlefish.components.MemoryBus
    io.cuttlefish.components.Cpu ..> io.cuttlefish.components.Alu
    io.cuttlefish.components.Cpu ..> io.cuttlefish.MemoryMapRanges
    io.cuttlefish.components.Cpu ..> io.cuttlefish.RegisterType
    io.cuttlefish.components.Cpu ..> io.cuttlefish.instructions.MemoryKt
    io.cuttlefish.components.Cpu ..> io.cuttlefish.components.Registers
    io.cuttlefish.components.Cpu ..> io.cuttlefish.config.DebugConfig
    io.cuttlefish.MemoryManagement <|.. io.cuttlefish.devices.Device
    io.cuttlefish.devices.Device ..> io.cuttlefish.MemoryManagement
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.components.Alu
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.instructions.ArithmeticKt
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.RegisterType
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.components.Cpu
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.Instruction
    io.cuttlefish.instructions.MemoryKt ..> io.cuttlefish.components.MemoryBus
    io.cuttlefish.instructions.ArithmeticKt ..> io.cuttlefish.components.Alu
    io.cuttlefish.instructions.ArithmeticKt ..> io.cuttlefish.RegisterType
    io.cuttlefish.instructions.ArithmeticKt ..> io.cuttlefish.components.Cpu
    io.cuttlefish.instructions.ArithmeticKt ..> io.cuttlefish.Instruction
    io.cuttlefish.instructions.ArithmeticKt ..> io.cuttlefish.components.Registers
    io.cuttlefish.components.Clock ..> io.cuttlefish.config.ClockConfig
    io.cuttlefish.backend.Backend ..> io.cuttlefish.instructions.ArithmeticKt
    io.cuttlefish.backend.Backend ..> io.cuttlefish.Instruction
    io.cuttlefish.backend.Backend ..> io.cuttlefish.RegisterType
    io.cuttlefish.devices.Device <|.. io.cuttlefish.devices.Console
    io.cuttlefish.MemoryManagement <|.. io.cuttlefish.devices.Console
    io.cuttlefish.devices.Console ..> io.cuttlefish.devices.Device
    io.cuttlefish.devices.Console ..> io.cuttlefish.HelperKt
    io.cuttlefish.devices.Console ..> io.cuttlefish.components.Clock
    io.cuttlefish.devices.Device <|.. io.cuttlefish.devices.Display
    io.cuttlefish.MemoryManagement <|.. io.cuttlefish.devices.Display
    io.cuttlefish.devices.Display ..> io.cuttlefish.devices.GridPanel
    io.cuttlefish.devices.Display ..> io.cuttlefish.devices.Device
    io.cuttlefish.devices.Display ..> io.cuttlefish.devices.DisplayKt
    io.cuttlefish.components.Registers ..> io.cuttlefish.RegisterType
    io.cuttlefish.components.Registers ..> io.cuttlefish.components.Clock
